Update navigation and hero section comment
Updated navigation to include World Map link and modified hero section comment.

--- a/party.html
+++ b/party.html
@@ -34,8 +34,8 @@
           <li><a href="party.html">Party</a></li>
           <li><a href="loot.html">Loot</a></li>
           <li><a href="locations.html">Places</a></li>
-          <li><a href="world-map.html">World Map</a></li>
           <li><a href="sessions.html">Sessions</a></li>
+          <li><a href="world-map.html">World Map</a></li>
         </ul>
       </nav>
     </div>
@@ -43,7 +43,7 @@
 
   <main>
 
-    <!-- HERO / COVER -->
+    <!-- HERO / COVER (Updated with new hero art) -->
     <section class="hero" id="top">
       <div class="hero-inner">
         <div class="hero-image">
@@ -91,7 +91,6 @@
       </p>
 
       <div class="party-grid">
-
         <!-- Lyrixia -->
         <article class="party-card">
           <img src="images/lyrixia.jpg" alt="Lyrixia, tiefling bard">
@@ -216,6 +215,3 @@
   </footer>
 </body>
 </html>
-
-
-
