Fix duplicate World Map link and add comment

--- a/loot.html
+++ b/loot.html
@@ -42,8 +42,8 @@
           <li><a href="party.html">Party</a></li>
           <li><a href="loot.html">Loot</a></li>
           <li><a href="locations.html">Places</a></li>
-          <li><a href="world-map.html">World Map</a></li>
           <li><a href="sessions.html">Sessions</a></li>
+          <li><a href="world-map.html">World Map</a></li>
         </ul>
       </nav>
     </div>
@@ -54,6 +54,7 @@
     <section class="hero" id="top">
       <div class="hero-inner">
         <div class="hero-image">
+          <!-- New shrine/altar loot art -->
           <img src="images/loot-hero-shrine.jpg" alt="Ancient dragon shrine glowing over a hoard of artifacts and relics">
         </div>
         <div class="hero-content">
@@ -202,6 +203,3 @@
   </footer>
 </body>
 </html>
-
-
-
