Update navigation and hero image formatting

--- a/world-map.html
+++ b/world-map.html
@@ -36,14 +36,14 @@
         <span class="nav-toggle-bar"></span>
       </button>
 
-     <nav class="main-nav">
+      <nav class="main-nav">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="party.html">Party</a></li>
           <li><a href="loot.html">Loot</a></li>
           <li><a href="locations.html">Places</a></li>
-          <li><a href="world-map.html">World Map</a></li>
           <li><a href="sessions.html">Sessions</a></li>
+          <li><a href="world-map.html" aria-current="page">World Map</a></li>
         </ul>
       </nav>
     </div>
@@ -55,8 +55,12 @@
       <div class="hero-inner">
         <div class="hero-image">
           <!-- Use your panoramic map image here -->
-          <img src="images/hero-locations.jpg" alt="A sweeping fantasy map of coasts, mountains, deserts and forests">
+          <img
+            src="images/hero-locations.jpg"
+            alt="A sweeping fantasy map of coasts, mountains, deserts and forests"
+          />
         </div>
+
         <div class="hero-content">
           <div class="hero-tag">
             <span>World Map</span> • Stormwreck → Greenest → Avernus → Underdark
