Update hero image to magical compass

--- a/world-map.html
+++ b/world-map.html
@@ -54,11 +54,10 @@
     <section class="hero" id="top">
       <div class="hero-inner">
         <div class="hero-image">
-          <!-- Use a dedicated world map hero image here -->
-          <!-- Example filename: images/world-map-hero.jpg -->
+          <!-- Magical compass hero image -->
           <img
-            src="images/world-map-hero.jpg"
-            alt="A sweeping fantasy map of coasts, mountains, deserts and distant stormy seas"
+            src="images/worldmap-hero-compass.jpg"
+            alt="A glowing magical brass compass resting on an old fantasy map"
           />
         </div>
 
